# load-balancer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustlb.service
.github/workflows/: ci.yml
benches/: load_balancer.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  REQUIREMENTS.md  example-config.yaml
examples/: full-featured.yaml  simple.yaml  tcp-proxy.yaml  weighted.yaml
src/: lib.rs  main.rs  state.rs
src/backend/: mod.rs  pool.rs  router.rs
src/backend/algorithms/: ip_hash.rs  least_conn.rs  mod.rs  round_robin.rs  weighted.rs
src/config/: loader.rs  mod.rs  types.rs  validation.rs  watcher.rs
src/frontend/: http.rs  listener.rs  mod.rs  tcp.rs
src/health/: checker.rs  mod.rs  passive.rs  state.rs
src/metrics/: collector.rs  mod.rs  server.rs
src/proxy/: http_proxy.rs  mod.rs  tcp_proxy.rs
src/util/: logging.rs  mod.rs  request_id.rs  shutdown.rs
tests/: integration_tests.rs
