[package]
name = "rustlb"
version = "0.1.0"
edition = "2024"
description = "A high-performance Layer 4/7 load balancer written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rustlb"
keywords = ["load-balancer", "proxy", "networking", "http", "tcp"]
categories = ["network-programming", "web-programming"]

[[bin]]
name = "rustlb"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization and config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus-client = "0.22"

# Concurrency utilities
arc-swap = "1"
dashmap = "6"
parking_lot = "0.12"

# File watching
notify = "7"

# Error handling
thiserror = "2"
anyhow = "1"

# Networking utilities
socket2 = { version = "0.5", features = ["all"] }

# Miscellaneous
bytes = "1"
humantime = "2"
pin-project-lite = "0.2"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
